--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <section>
             <div class="container" id="contain">
                 <img class="top-banner" src="images/Banner Image.png" alt="">
-                <h1 class="header-1"><strong>The Greatest  <br> Show on the <br>earth</strong></h1>
-                <p class="paragraph-1"><b> Enjoy FIFA World Cup 2022 Live action.Please click the below button and watch now.</b>
+                <h1 class="header-1"><strong>The Greatest  <br> Show on the <br>earth.</strong></h1>
+                <p class="paragraph-1"><b> Enjoy FIFA World Cup 2022 Live action.<br>Please click the below button and watch now.</b>
                 </p>
             </div>
             <div>
