--- a/index.html
+++ b/index.html
@@ -54,15 +54,14 @@
     <!-- Navigation Starts -->
     <section class="container-2">
         <nav>
-<div class="nav-button">
-    <br><br><br>
-    <button><a href="">Upcoming Match</a></button><br><br>
-    <button><a href="">All Groups</a></button><br><br>
-    <button><a href="">Blogs</a></button><br><br>
+<div class="upcoming">
+    <button><a href="">Upcoming Match</a></button>
 </div>
-        </nav>
+<div class="groups"><button><a href="">All Groups</a></button> </div>
     
+<div class="blogs"><button><a href="">Blogs</a></button></div>
     
+        </nav> 
 </section>
 
     </header>
