--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 <section class="container-2">
 
     <div class="nav-button" id="up">
-      <button><a href="upcoming-matches.html">Upcoming Match</a></button>  
+      <a href="upcoming-matches.html">Upcoming Match</a>
     </div>
     <div class="nav-button" id="groups">
-        <button><a href="upcoming-matches.html">All Groups</a></button>
+        <a href="upcoming-matches.html">All Groups</a>
     </div>
 
     <div class="nav-button" id="blogs">
-    <button><a href="upcoming-matches.html">Blogs</a></button> 
+    <a href="upcoming-matches.html">Blogs</a>
     </div>
 </section>
 </nav>
