--- a/index.html
+++ b/index.html
@@ -33,27 +33,28 @@
 
 </head>
 <body>
+<!-- Top Banner Starts -->
+<header>
+    <section>
+        <div class="banner" id="ban-ner">
+            <img class="top-banner" src="images/Banner Image.png" alt="">
+            <h1 class="header-1"><strong>The Greatest <br> Show on the <br>earth.</strong></h1>
+            <p class="paragraph-1"> Enjoy FIFA World Cup 2022 Live action.<br>Please click the below button and watch
+                now.
+            </p>
+        </div>
+        <div class="button">
+            <a class="link-button" target="_blank" href="https://youtube.com"><strong>Watch Live
+                </strong></a>
+            <div class="play">
+                <i class="fa-regular fa-play"></i>
+            </div>
 
-    <!-- Top Banner Starts -->
-    <header>
-        <section>
-            <div class="banner" id="ban-ner">
-                <img class="top-banner" src="images/Banner Image.png" alt="">
-                <h1 class="header-1"><strong>The Greatest <br> Show on the <br>earth.</strong></h1>
-                <p class="paragraph-1"> Enjoy FIFA World Cup 2022 Live action.<br>Please click the below button and watch now.
-                </p>
-            </div>
-            <div class="button">
-                <a class="link-button" target="_blank" href="https://youtube.com"><strong>Watch Live
-                    </strong></a>
-                <div class="play">
-                    <i class="fa-regular fa-play"></i>
-                </div>
-        
-            </div>
-        </section>
+        </div>
+    </section>
 
     <!-- Top Banner Ends -->
+
 
 <!-- Blogs Section Starts Here -->
 <section class="blogs-section">
@@ -272,7 +273,7 @@
     <div class="footer-sec">
 <h2 >© Goal <br></h2>
     </div>
-    <div><div class="footer-para">
+        <div class="footer-para">
         <p class="fp-1">Contact Us</p>
         <p class="fp-2">Terms of Services</p>
         <p class="fp-3">Privacy Policy</p>
